@@ -3,6 +3,8 @@ Released on 2020-10-05?
 ======================================
 
 
+bpo-39781: Selecting code context lines no longer causes a jump.
+
 bpo-39663: Add tests for pyparse find_good_parse_start().
 
 bpo-39600: Remove duplicate font names from configuration list.
